# codebase

./: README.md
.github/workflows/: release.yml
goal_detection/model_trained/front_train/: args.yaml  results.csv
goal_detection/model_trained/omni_train/omni_goal_26/: args.yaml  results.csv
goal_detection/train_code/: Front-Fine_Tune_YOLO26n.ipynb  omni_yolo26_v1.ipynb
ros2dev/: Cargo.toml  README.md
ros2dev/scripts/: install_linux.sh
ros2dev/src/: app.rs  main.rs
ros2dev/src/core/: config.rs  events.rs  ipc.rs  log_buffer.rs  mod.rs
ros2dev/src/process/: manager.rs  mod.rs  types.rs
ros2dev/src/ros2/: detection.rs  introspection.rs  mod.rs  scanner.rs  templates.rs
ros2dev/src/ui/: icons.rs  mod.rs  render.rs  theme.rs
